# square_authentication

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yaml
square_authentication/: configuration.py  main.py  messages.py
square_authentication/data/: config.ini  config.sample.ini  config.testing.ini  config.testing.sample.ini
square_authentication/data/emails/: email_verification.html  password_reset.html
square_authentication/pydantic_models/: core.py  internal.py  profile.py
square_authentication/routes/: core.py  internal.py  profile.py  utility.py
square_authentication/utils/: core.py  encryption.py  redirect.py  token.py
square_authentication/utils/routes/: core.py  internal.py  profile.py  utility.py
tests/: conftest.py  test_1.py  test_authentication.py  test_delete_user.py  test_email_verification.py  test_login.py  test_profile_management.py  test_token_management.py  test_update_profile.py  test_username.py
