[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_authentication"
version = "10.3.0"
description = "authentication layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_authentication" }
keywords = ["authentication", "fastapi", "server", "utilities"]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "bcrypt>=4.1.2",
    "pyjwt>=2.8.0",
    "requests>=2.32.3",
    "cryptography>=42.0.7",
    "square_commons>=3.0.0",
    "square_logger>=3.0.0",
    "square_database_helper>=2.6.1",
    "square_database_structure>=2.6.0",
    "square_file_store_helper>=3.0.0",
    "httpx>=0.27.2",
    "google-auth>=2.40.3",
]
optional-dependencies = { all = ["pytest>=8.3.3"], dev = ["pytest>=8.3.3"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI"
]

[tool.uv.build-backend]
module-name = "square_authentication"
module-root = ""
source-include = ["square_authentication/data/*"]